force-app/main/default/objects/Alarme__c/Alarme__c.object-meta.xml
<CustomObject>
    <label>Alarme</label>
    <nameField>
        <displayFormat>Alarme - {00000}</displayFormat>
        <label>Nom de l&apos;alarme</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alarmes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>