force-app/main/default/objects/Alarme__c/fields/Alarme_ExtId_SIP__c.field-meta.xml
<CustomField>
    <fullName>Alarme_ExtId_SIP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Alarme_ExtId_SIP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>