force-app/main/default/objects/Alarme__c/fields/Date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de début</label>
    <type>DateTime</type>
</CustomField>