force-app/main/default/objects/Alarme__c/fields/Date_de_l_alarme__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_alarme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de l&apos;alarme</label>
    <type>Date</type>
</CustomField>