force-app/main/default/objects/Alarme__c/fields/Motif_d_appel__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_appel__c</fullName>
    <label>Motif d&apos;appel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABSENCE DE MOUVEMENT JUSTIFIEE</fullName>
            </value>
            <value>
                <fullName>ANOMALIE CARTE SIM</fullName>
            </value>
            <value>
                <fullName>ATTACHE CASSEE</fullName>
            </value>
            <value>
                <fullName>BLUETOOTH</fullName>
            </value>
            <value>
                <fullName>CHUTE TEMPORAIRE</fullName>
            </value>
            <value>
                <fullName>J+22 à J+44</fullName>
            </value>
            <value>
                <fullName>NON PORTE ECOUTE AU CASQUE</fullName>
            </value>
            <value>
                <fullName>PAGER CASSE</fullName>
            </value>
            <value>
                <fullName>PAGER NON CHARGE</fullName>
            </value>
            <value>
                <fullName>PAGER NON PORTE</fullName>
            </value>
            <value>
                <fullName>SUSPENDU</fullName>
            </value>
            <value>
                <fullName>VACANCIER</fullName>
            </value>
            <value>
                <fullName>ECOUTE AU CASQUE BLUETOOTH</fullName>
            </value>
            <value>
                <fullName>MANIP KO</fullName>
            </value>
            <value>
                <fullName>PAGER (TROP LOURD )</fullName>
            </value>
            <value>
                <fullName>PAGER PERDU</fullName>
            </value>
            <value>
                <fullName>PROBLEME DE BATTERIE</fullName>
            </value>
            <value>
                <fullName>AUDIENCE JUSTIFIEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>