force-app/main/default/objects/Alarme__c/fields/Sous_type_d_alarme__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_d_alarme__c</fullName>
    <label>Sous-type d&apos;alarme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anomalie des données en base panel</fullName>
            </value>
            <value>
                <fullName>Anomalie lors du traitement des données d&apos;audience</fullName>
            </value>
            <value>
                <fullName>Audience individuelle &gt; 9h</fullName>
            </value>
            <value>
                <fullName>Individu sans activité Web cohérente</fullName>
            </value>
            <value>
                <fullName>Individus sans audience depuis 28 jours ou plus</fullName>
            </value>
            <value>
                <fullName>Foyers sans audience depuis 6 jours ou plus</fullName>
            </value>
            <value>
                <fullName>Foyer avec audience sans abo</fullName>
            </value>
            <value>
                <fullName>Foyer avec abo C+ sans audience</fullName>
            </value>
            <value>
                <fullName>Foyer sans activité routeur</fullName>
            </value>
            <value>
                <fullName>Foyer sans activité Web cohérente</fullName>
            </value>
            <value>
                <fullName>Non envoyé au Médiamat</fullName>
            </value>
            <value>
                <fullName>Rejeté Médiamat</fullName>
            </value>
            <value>
                <fullName>TV On &gt; 12h</fullName>
            </value>
            <value>
                <fullName>Autres usages</fullName>
            </value>
            <value>
                <fullName>Autre cause technique</fullName>
            </value>
            <value>
                <fullName>Foyer vacancier longue durée</fullName>
            </value>
            <value>
                <fullName>Audimètre non connecté</fullName>
            </value>
            <value>
                <fullName>Audience individuelle &gt; 7h</fullName>
            </value>
            <value>
                <fullName>Inconnu</fullName>
            </value>
            <value>
                <fullName>Foyers sans audience depuis 4 jours</fullName>
            </value>
            <value>
                <fullName>Foyers sans audience depuis plus de 4 jours</fullName>
            </value>
            <value>
                <fullName>Individus sans audience depuis 4 jours</fullName>
            </value>
            <value>
                <fullName>Individus sans audience depuis plus de 4 jours</fullName>
            </value>
            <value>
                <fullName>Statut audim. sans date</fullName>
            </value>
            <value>
                <fullName>Foyers sans audience depuis plus de 90 jours</fullName>
            </value>
            <value>
                <fullName>Foyers sans audience depuis plus de 180 jours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>