force-app/main/default/objects/Alarme__c/fields/Type_d_alarme__c.field-meta.xml
<CustomField>
    <fullName>Type_d_alarme__c</fullName>
    <label>Type d&apos;alarme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Présence</fullName>
            </value>
            <value>
                <fullName>Autres usages</fullName>
            </value>
            <value>
                <fullName>Connexion</fullName>
            </value>
            <value>
                <fullName>Participation</fullName>
            </value>
            <value>
                <fullName>Réception/abonnement</fullName>
            </value>
            <value>
                <fullName>Non Répondant</fullName>
            </value>
            <value>
                <fullName>Participation Web</fullName>
            </value>
            <value>
                <fullName>Foyer vacancier longue durée</fullName>
            </value>
            <value>
                <fullName>Inconnu</fullName>
            </value>
            <value>
                <fullName>Foyer vacancier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>